--- a/app/assets/stylesheets/collections/_components.scss
+++ b/app/assets/stylesheets/collections/_components.scss
@@ -18,12 +18,18 @@
 .btn:active, .btn:focus {
 	box-shadow: none;
 }
-.btn-portal, .btn-portal:hover, .btn-portal:active, .btn-portal:focus {
+.btn-portal {
   border-radius: 0;
   background: $portal-red;
   color: white;
   font-size: 14px;
   border: 0;
+}
+.btn-portal:hover,
+.btn-portal:active,
+.btn-portal:focus {
+  background: $portal-red-hover;
+  color: white;
 }
 // Bootstrap overrides
 .btn {
