--- a/app/assets/stylesheets/collections/_variables_application.scss
+++ b/app/assets/stylesheets/collections/_variables_application.scss
@@ -13,6 +13,7 @@ $light-tan: #e7e6df;
 
 // portal 
 $portal-red: #9c1515;
+$portal-red-hover: #7d0e21;
 $warm-gray: #d7d4d4;
 
 // Google fonts
